# mountbox

./: .gitignore  Cargo.toml  build.rs  mountbox.h
flatbuffers/: request.fbs  response.fbs
src/: dirfd_resolver.rs  fb.rs  fd_allocator.rs  lib.rs  main.rs  mounts.rs  ptrace.rs  router.rs  routers.rs  server.rs  state.rs  tracer.rs
src/_syscalls/: getcwd.rs
src/plugin/: errors.rs  mod.rs  plugin.rs  raw.rs
src/ptrace/: mod.rs  ptrace.rs  tracer.rs
src/ptrace/router/: chdir.rs  close.rs  execve.rs  fstat.rs  getcwd.rs  lstat.rs  mod.rs  open.rs  read.rs  stat.rs  statx.rs
src/router/: close.rs  fstat.rs  lstat.rs  mod.rs  open.rs  read.rs  stat.rs  statx.rs
src/sockets/: mod.rs  socket.rs  unix.rs
src/syscalls/: close.rs  execve.rs  fstat.rs  getcwd.rs  lstat.rs  mod.rs  open.rs  openat.rs  read.rs  stat.rs  statx.rs
src/tracer/: mod.rs  ptrace.rs
src/tracer/router/: chdir.rs  close.rs  execve.rs  fstat.rs  getcwd.rs  lstat.rs  mod.rs  open.rs  read.rs  stat.rs  statx.rs
tests/: chdir.rs  close.rs  execve.rs  fstat.rs  getcwd.rs  lstat.rs  open.rs  read.rs  stat.rs  statx.rs  syscalls.rs  tracer.rs
tests/common/: mod.rs
