[package]
name = "mountbox"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
flatbuffers = "24.3.25"
nix = {version="0.29.0", features=["ptrace", "fs"]}

[dev-dependencies]
rusty-fork = "0.3.0"
paste = "1.0.15"

[build-dependencies]
flatc = "0.2.2"
flatc-rust = "0.2.0"
