[package]
name = "mountbox"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
dashmap = "6.1.0"
dlopen = "0.1.8"
gettid = "0.1.4"
nix = {version="0.29.0", features=["ptrace", "fs"]}

[dev-dependencies]
rusty-fork = "0.3.0"
paste = "1.0.15"

[build-dependencies]
bindgen = "0.72.1"
